--- a/eventus/src/global.css
+++ b/eventus/src/global.css
@@ -154,6 +154,9 @@ input {
 	transition: opacity 0.2s ease;
 	font-size: 0.875rem;
 }
+.no-after::after{
+	content: none !important;
+}
 
 /* MEDIA QUERIES */
 
