atualizando estilização da scrollbar dos cards

--- a/eventus/src/components/CardEvento.css
+++ b/eventus/src/components/CardEvento.css
@@ -17,7 +17,7 @@
   border-radius: 10px;
 }
 
-::-webkit-scrollbar {
+.card::-webkit-scrollbar {
   padding: 20px;
   width: 12px;
   background-color: #2e2e2e;
@@ -25,7 +25,7 @@
   border-radius: 50px;
 }
 
-::-webkit-scrollbar-thumb{
+.card::-webkit-scrollbar-thumb{
   background-color: rgb(0, 116, 116);
   border-radius: 50px;
   border: 2px solid #2e2e2e;
