--- a/eventus/src/pages/nextEvents/App.css
+++ b/eventus/src/pages/nextEvents/App.css
@@ -35,7 +35,7 @@ ul {
   list-style-type: none;
 }
 
-.lista-cards {
+.list-cards {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
