--- a/eventus/src/components/CardEvento.css
+++ b/eventus/src/components/CardEvento.css
@@ -13,7 +13,7 @@
   height: 450px;
   padding: 20px;
   background-color: #2e2e2e;
-  color: #fff;
+  color: #f1e4e6;
   border-radius: 10px;
 }
 
@@ -26,7 +26,7 @@
 }
 
 .card::-webkit-scrollbar-thumb{
-  background-color: rgb(0, 116, 116);
+  background-color: #c36950;
   border-radius: 50px;
   border: 2px solid #2e2e2e;
 }
