--- a/eventus/src/global.css
+++ b/eventus/src/global.css
@@ -70,6 +70,11 @@ input {
 	color: var(--text);
 }
 
+.nav-link:hover{
+	color: var(--accent);
+	font-weight: bold;
+}
+
 .bg {
 	background-color: var(--background);
 }
