--- a/eventus/src/global.css
+++ b/eventus/src/global.css
@@ -142,16 +142,12 @@ input {
 
 /* INDEX */
 
-/* .container-carousel {
-	height: 500vh;
-} */
-
 
 /* FOOTER */
 
 .footerPages {
 	background-color: whitesmoke;
-	border-color:orangered;
+	border-color:var(--accent);
 	border-style:groove;
 	margin-top: 2.5rem;
 	padding: .8rem;
@@ -192,14 +188,15 @@ input {
     align-items: center;
   }
 
-  .search-input {
+  .search-navBar {
     max-width: 0;
     overflow: hidden;
     opacity: 0;
     transition: all 0.3s ease;
   }
 
-  .search-form:hover .search-input {
+  .search-form:hover .search-navBar {
+	border-color: var(--accent);
     max-width: 250px;
     opacity: 1;
     margin-right: 1rem;
@@ -240,12 +237,47 @@ input {
 
 .card {
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
+	height: 35rem;
 	margin: 2rem .25rem 0 .25rem;
 	border: black solid .125rem;
+	border-radius: .825rem;
 	width: 21rem;
 	gap: 1rem
 }
+
+.card-img-custom {
+	max-height: 200px;
+	width: 100%; 
+	object-fit: cover; 
+  }
+  
+
+.card-title {
+	color: var(--accent);
+	margin-bottom: 0.75rem; 
+	text-align: justify; 
+  }
+  
+  .card-text {
+	text-align: justify; 
+  }
+  
+  .card-body {
+	padding: 1.25rem; 
+  }
+  
+  .btn-orange {
+	background-color: var(--accent);
+	border-color: var(--accent);
+	color: black;
+  }
+  
+  .btn-orange:hover {
+	background-color: #fd6f1b;
+	border-color: #fd6f1b;
+  }
+  
 
 .error-message {
 	height: 1.5rem;
@@ -296,7 +328,6 @@ input {
 	line-height: 1.8; 
 	text-align: justify;
   }
-
   
 
 /* PAGES */
@@ -307,7 +338,7 @@ input {
 	width: 85%;
 	background-color: var(--background);
 	border-radius: 20px;
-	border: solid var(--accent) .2rem;
+	/* border: solid var(--accent) .2rem; */
 }
 .custom-card {
 	background-color: var(--background) !important;
@@ -332,26 +363,56 @@ input {
 
 /* NEXT EVENTS */
 
-/* .container-events {
-	max-width: 1280px;
+.nextEvents {
+	max-width: 90%;
 	margin: 0 auto;
-	text-align: center;  
-	margin-bottom: 30px;
+	text-align: center;
+	margin-bottom: 50px;
   }
-  .search label input {
-	font-size: 20px;
-	text-align: left;
+  
+  .search {
+	position: relative;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	margin-bottom: 1rem;
+  }
+  
+  .search-label {
 	width: 80%;
+  }
+
+  
+  
+  .search-input {
+	cursor: pointer;
+	font-size: 20px;
+	text-align: center;
+	width: 0;
 	padding: 10px;
 	border: 1px solid var(--primary);
 	border-radius: 15px;
 	background-color: var(--background);
+	opacity: 0;
+	max-width: 80%; /* Limita ao tamanho do contêiner */
+	transition: all 0.3s ease;
   }
+  
+  .search:hover .search-input {
+	border: solid var(--accent);
+	width: 100%;
+	opacity: 1;
+  }
+
+  .nextEvents .search:hover h1 {
+    color: var(--accent);
+}
+  
   .list-cards {
-	background-color: var(--accent);
+	border: solid var(--accent) .25rem;
   }
   .pagination button {
-	margin: 0 10px;
+	margin: 20px 12px;
 	padding: 5px 15px;
 	font-size: 16px;
 	cursor: pointer;
@@ -360,31 +421,82 @@ input {
 	color: var(--text);
 	border-radius: 5px;
   }
+
+  .pagination button:hover {
+	color: #050505;
+  }
   .pagination button:disabled {
 	background-color: var(--text);
 	cursor: not-allowed;
   }
 
-  .card{
-	  width: 300px;
-	  height: 450px;
-	  background-color: #2e2e2e;
-	color: #f1e4e6;
-  }
-  .card::-webkit-scrollbar {
-	padding: 20px;
-	width: 12px;
-	background-color: #2e2e2e;
-	border: 5px solid #2e2e2e;
-	border-radius: 50px;
-  }
-  .card::-webkit-scrollbar-thumb{
-	background-color: #c36950;
-	border-radius: 50px;
-	border: 2px solid #2e2e2e;
-  }
-   */
+  /* EVENTDETAILS */
 
+  .eventDetails {
+	border: solid var(--accent) 0.25rem;
+	border-radius: 0.3rem;
+	padding: 2rem;
+	width: 90%;
+	margin: 0 auto;
+  }
+  
+  .eventSection {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
+  }
+  
+  @media (min-width: 768px) {
+	.eventSection {
+	  flex-direction: row;
+	}
+  }
+  
+  .eventTitle {
+	/* margin-top: 1rem; */
+	text-align: justify;
+	color: whitesmoke;
+	margin-bottom: 4rem;
+	font-size: 1.5rem; /* Mantém fs-3 */
+	font-weight: bold;
+  }
+  
+  .eventDescription {
+	text-align: justify;
+	line-height: 1.3;
+	color: #555;
+	margin-top: 1rem;
+	font-size: 1.2rem; /* Mantém fs-4 */
+  }
+  
+  .eventImage {
+	max-width: 250rem;
+	margin-left: 5rem;
+	border-radius: 0.3rem;
+	box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+	transition: transform 0.3s ease;
+	width: 75%;
+  }
+  
+  .eventImage:hover {
+	transform: scale(1.05);
+  }
+  
+  .eventButton {
+	background-color: var(--accent);
+	font-size: 1.25rem; /* Mantém fs-5 */
+	font-weight: bold;
+	padding: 0.5rem 1rem;
+	transition: background-color 0.3s ease, color 0.3s ease;
+  }
+  
+  .eventButton:hover {
+	background-color: var(--accent);
+	color: whitesmoke;
+  }
+  
+  
 /* MEDIA QUERIES */
 
 /* Mobile - dispositivos menores que 480px */
